// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressLabelInput should render correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
    }
  }
>
  <TextInput
    onChangeText={[Function]}
    style={
      [
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 32.5,
          "overflow": "hidden",
          "textAlign": "center",
        },
        {
          "color": "#2B1911",
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <test-file-stub
      fill="#F56522"
      style={
        [
          {
            "height": 16,
            "width": 16,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`AddressLabelInput should render correctly with callback 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 4,
      "justifyContent": "center",
    }
  }
>
  <TextInput
    onChangeText={[Function]}
    style={
      [
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 32.5,
          "overflow": "hidden",
          "textAlign": "center",
        },
        {
          "color": "#2B1911",
        },
      ]
    }
    value="fallback"
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <test-file-stub
      fill="#F56522"
      style={
        [
          {
            "height": 16,
            "width": 16,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
